k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "2401106"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: "2401106"
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      imagePullSecrets:
      - name: nexus-secret
      containers:
      - name: server
        image: 127.0.0.1:30085/2401106/server:latest
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: "2401106"
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      imagePullSecrets:
      - name: nexus-secret
      containers:
      - name: client
        image: 127.0.0.1:30085/2401106/client:latest
        ports:
        - containerPort: 80
