k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: "2401106"
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: "2401106"
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
